# spacesim

./: .gitignore  CMakeLists.txt  ENTREGA.md  NO-ANDA.md  README.md
resources/ephemerides/: 2028-12-31_00-00-00.csv  2029-08-28_00-00-00.csv  2029-08-28_00_00_00.csv
resources/shaders/glsl330/: cubemap.fs  cubemap.vs  skybox.fs  skybox.vs
src/: mars_mission.cpp  sim_headless.cpp  sim_visualizer.cpp  solar_system.cpp
src/physics/: mission.cpp  mission.h  solver.cpp  solver.h
src/renderer/: body.cpp  body.h  camera.cpp  camera.h  grid.cpp  grid.h  hud.cpp  hud.h  renderer.cpp  renderer.h  skysphere.cpp  skysphere.h
